[package]
name = "spawners"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/bin/pids.rs"
name = "pids"

[[bin]]
path = "src/bin/spawners.rs"
name = "spawners"

[[bin]]
path = "src/bin/names.rs"
name = "names"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
] }
anyhow = "1.0.99"
